codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__pre_tool_use_hook_events_render_snapshot.snap
---
source: tui/src/chatwidget/tests/helpers.rs
expression: combined
---
• PreToolUse hook (completed)
  warning: Heads up from the hook
